@@ -10,7 +10,6 @@ namespace AjClipper.Expressions
         private IExpression expression;
         private string name;
         private ICollection<IExpression> arguments;
-        private Type type;
 
         public DotExpression(IExpression expression, string name)
             : this(expression, name, null)
@@ -22,14 +21,11 @@ namespace AjClipper.Expressions
             this.expression = expression;
             this.name = name;
             this.arguments = arguments;
-            this.type = AsType(this.expression);
         }
 
         public string Name { get { return this.name; } }
 
         public IExpression Expression { get { return this.expression; } }
-
-        public Type Type { get { return this.type; } }
 
         public ICollection<IExpression> Arguments { get { return this.arguments; } }
 
@@ -37,7 +33,9 @@ namespace AjClipper.Expressions
         {
             object obj = null;
 
-            if (this.type == null)
+            Type type = AsType(this.expression, environment);
+            
+            if (type == null)
                 obj = this.expression.Evaluate(environment);
 
             object[] parameters = null;
@@ -52,8 +50,8 @@ namespace AjClipper.Expressions
                 parameters = values.ToArray();
             }
 
-            if (this.type != null)
-                return TypeUtilities.InvokeTypeMember(this.type, this.name, parameters);
+            if (type != null)
+                return TypeUtilities.InvokeTypeMember(type, this.name, parameters);
 
             // TODO if undefined, do nothing
             if (obj == null)
@@ -62,9 +60,9 @@ namespace AjClipper.Expressions
             return ObjectUtilities.GetValue(obj, this.name, parameters);
         }
 
-        private static Type AsType(IExpression expression)
+        private static Type AsType(IExpression expression, ValueEnvironment environment)
         {
-            string name = AsName(expression);
+            string name = EvaluateUtilities.EvaluateAsName(expression, environment);
 
             if (name == null)
                 return null;
